--- a/app/views/facebooks/_form.html.erb
+++ b/app/views/facebooks/_form.html.erb
@@ -11,7 +11,7 @@
       <td>
         <%= form.text_field :email, id: :facebook_email, class: 'inputtext' %>
       </td>
-      <td><%= form.text_field :password, id: :facebook_password, class: 'inputtext' %>
+      <td><%= form.password_field :password, id: :facebook_password, class: 'inputtext' %>
       </td>
       <td>
         <div class="button">
